<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/dialogs">

        <EditTextPreference
            android:key="edittext"
            android:title="@string/title_edittext_preference"
            app:useSimpleSummaryProvider="true"
            android:dialogTitle="@string/dialog_title_edittext_preference"/>

        <ListPreference
            android:key="list"
            android:title="@string/title_list_preference"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/islands"
            android:entryValues="@array/islands"
            android:dialogTitle="@string/dialog_title_list_preference"/>

        <MultiSelectListPreference
            android:key="multi_select_list"
            android:title="@string/title_multi_list_preference"
            android:summary="@string/summary_multi_list_preference"
            android:entries="@array/islands"
            android:entryValues="@array/islands"
            android:dialogTitle="@string/dialog_title_multi_list_preference"/>

        <DropDownPreference
            android:key="dropdown"
            android:title="@string/title_dropdown_preference"
            android:entries="@array/islands"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/islands"/>

        <SeekBarPreference
            android:key="seekbar"
            android:title="@string/title_seekbar_preference"
            android:max="10"
            android:defaultValue="5"/>
    </PreferenceCategory>

</PreferenceScreen>